# romm-rust

./: .gitignore  Cargo.toml  Cross.toml  README.md  justfile
assets/miyoo-mini/: config.json  config.toml  launch.sh  start-daemon.sh
crates/romm-api/: README.md
crates/syncer-daemon/: Cargo.toml  README.md
crates/syncer-daemon/assets/miyoo-mini/: config.toml  launch.sh
crates/syncer-daemon/src/: main.rs  model.rs  rommclient.rs  save_finding.rs  socketproto.rs  syncing.rs  utils.rs
crates/syncer-daemon/src/database/: mod.rs
crates/syncer-daemon/src/database/migrations/: mod.rs
crates/syncer-daemon/src/ui/: mod.rs
crates/syncer-model/: Cargo.toml  README.md
crates/syncer-model/src/: commands.rs  lib.rs  path_format_strings.rs  platforms.rs  utils.rs
crates/syncer-model/src/config/: loading.rs  mod.rs  save_finding.rs
crates/syncer-ui-miyoo/: Cargo.toml  README.md
crates/syncer-ui-miyoo/src/: components.rs  daemon.rs  homepage.rs  main.rs  miyoo_io.rs  savelist.rs  socketproto.rs
crates/syncer-ui-miyoo/src/utils/: mod.rs  views.rs
romm-api/: Cargo.toml
romm-api/assets/: openapi.json
romm-api/examples/: add_collection_api_collections_post.rs  add_exclusion_api_config_exclude_post.rs  add_firmware_api_firmware_post.rs  add_platform_binding_api_config_system_platforms_post.rs  add_platform_version_api_config_system_versions_post.rs  add_platforms_api_platforms_post.rs  add_rom_api_roms_post.rs  add_saves_api_saves_post.rs  add_screenshots_api_screenshots_post.rs  add_states_api_states_post.rs  add_user_api_users_post.rs  auth_openid_api_oauth_openid_get.rs  delete_collections_api_collections_id_delete.rs  delete_exclusion_api_config_exclude_exclusion_type_exclusion_value_delete.rs  delete_firmware_api_firmware_delete_post.rs  delete_platform_binding_api_config_system_platforms_fs_slug_delete.rs  delete_platform_version_api_config_system_versions_fs_slug_delete.rs  delete_platforms_api_platforms_id_delete.rs  delete_roms_api_roms_delete_post.rs  delete_saves_api_saves_delete_post.rs  delete_states_api_states_delete_post.rs  delete_user_api_users_id_delete.rs  get_collection_api_collections_id_get.rs  get_collections_api_collections_get.rs  get_config_api_config_get.rs  get_current_user_api_users_me_get.rs  get_firmware_api_firmware_id_get.rs  get_firmware_content_api_firmware_id_content_file_name_get.rs  get_platform_api_platforms_id_get.rs  get_platform_firmware_api_firmware_get.rs  get_platforms_api_platforms_get.rs  get_raw_asset_api_raw_assets_path_get.rs  get_rom_api_roms_id_get.rs  get_rom_content_api_roms_id_content_file_name_get.rs  get_roms_api_roms_get.rs  get_supported_platforms_api_platforms_supported_get.rs  get_user_api_users_id_get.rs  get_users_api_users_get.rs  head_firmware_content_api_firmware_id_content_file_name_head.rs  head_raw_asset_api_raw_assets_path_head.rs  (+20 more)
romm-api/src/: lib.rs
romm-api/src/model/: add_rom_api_roms_post_response.rs  config_response.rs  filesystem_dict.rs  get_current_user_api_users_me_get_response.rs  get_firmware_content_api_firmware_id_content_file_name_get_response.rs  get_raw_asset_api_raw_assets_path_get_response.rs  get_rom_content_api_roms_id_content_file_name_get_response.rs  head_firmware_content_api_firmware_id_content_file_name_head_response.rs  head_raw_asset_api_raw_assets_path_head_response.rs  head_rom_content_api_roms_id_content_file_name_head_response.rs  mod.rs  oidc_dict.rs  platform_schema.rs  rom_file.rs  save_schema.rs  scheduler_dict.rs  search_cover_schema.rs  search_rom_schema.rs  stats_return.rs  system_dict.rs  task_dict.rs  tinfoil_feed_schema.rs  uploaded_saves_response.rs  uploaded_states_response.rs  user_notes_schema.rs  user_schema.rs  webrcade_feed_category_schema.rs  webrcade_feed_item_props_schema.rs  webrcade_feed_item_schema.rs  webrcade_feed_schema.rs
romm-api/src/request/: add_collection_api_collections_post.rs  add_exclusion_api_config_exclude_post.rs  add_firmware_api_firmware_post.rs  add_platform_binding_api_config_system_platforms_post.rs  add_platform_version_api_config_system_versions_post.rs  add_platforms_api_platforms_post.rs  add_rom_api_roms_post.rs  add_saves_api_saves_post.rs  add_screenshots_api_screenshots_post.rs  add_states_api_states_post.rs  add_user_api_users_post.rs  auth_openid_api_oauth_openid_get.rs  delete_collections_api_collections_id_delete.rs  delete_exclusion_api_config_exclude_exclusion_type_exclusion_value_delete.rs  delete_firmware_api_firmware_delete_post.rs  delete_platform_binding_api_config_system_platforms_fs_slug_delete.rs  delete_platform_version_api_config_system_versions_fs_slug_delete.rs  delete_platforms_api_platforms_id_delete.rs  delete_roms_api_roms_delete_post.rs  delete_saves_api_saves_delete_post.rs  delete_states_api_states_delete_post.rs  delete_user_api_users_id_delete.rs  get_collection_api_collections_id_get.rs  get_collections_api_collections_get.rs  get_config_api_config_get.rs  get_current_user_api_users_me_get.rs  get_firmware_api_firmware_id_get.rs  get_firmware_content_api_firmware_id_content_file_name_get.rs  get_platform_api_platforms_id_get.rs  get_platform_firmware_api_firmware_get.rs  get_platforms_api_platforms_get.rs  get_raw_asset_api_raw_assets_path_get.rs  get_rom_api_roms_id_get.rs  get_rom_content_api_roms_id_content_file_name_get.rs  get_roms_api_roms_get.rs  get_supported_platforms_api_platforms_supported_get.rs  get_user_api_users_id_get.rs  get_users_api_users_get.rs  head_firmware_content_api_firmware_id_content_file_name_head.rs  head_raw_asset_api_raw_assets_path_head.rs  (+21 more)
simple-manual-syncer/: Cargo.toml  README.md
simple-manual-syncer/assets/: config.toml
simple-manual-syncer/assets/miyoo-mini/: launch.sh
simple-manual-syncer/src/: deviceclient.rs  main.rs  md5hash.rs  model.rs  path_format_strings.rs  rommclient.rs  syncing.rs  utils.rs
simple-manual-syncer/src/config/: loading.rs  mod.rs  save_finding.rs  save_formats.rs
simple-manual-syncer/src/database/: mod.rs
simple-manual-syncer/src/database/migrations/: base.rs  mod.rs  scaffolding.rs
(+27 files in other folders)
