[workspace]
resolver = "2"
members = ["crates/romm-api", "crates/syncer-daemon", "crates/syncer-model", "crates/syncer-ui-miyoo"]

[workspace.dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
interprocess = { version = "2.2.3", features = ["tokio"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
url = { version = "2.5.4", features = ["serde"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
