[package]
name = "simple-manual-syncer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
embedded-graphics = "0.8.1"
romm-api = { path = "../romm-api" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
ureq = { version = "3.0.5", features = ["json"] }
url = { version = "2.5.4", features = ["serde"] }
