[package]
name = "simple-manual-syncer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
md-5 = "0.10.6"
reqwest = { version = "0.12.12", features = ["stream", "multipart"] }
romm-api = { path = "../romm-api" }
rusqlite = { version = "0.33.0", features = ["bundled", "serde_json", "url", "chrono"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
