[package]
name = "syncer-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
buoyant = { version = "0.4.0-alpha.1", features = ["std"], git = "https://github.com/riley-williams/buoyant" }
chrono = { version = "0.4.39", features = ["serde"] }
embedded-graphics = "0.8.1"
embedded-layout = "0.4.1"
embedded-text = "0.7.2"
embedded-vintage-fonts = "0.2.0"
evdev = { version = "0.13.0", features = ["tokio"] }
futures = "0.3.31"
linuxfb = "0.3.1"
md-5 = "0.10.6"
reqwest = { version = "0.12.12", default-features = false, features = ["stream", "multipart", "rustls-tls", "http2", "charset"] }
romm-api = { path = "../romm-api" }
rusqlite = { version = "0.33.0", features = ["bundled", "serde_json", "url", "chrono"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
url = { version = "2.5.4", features = ["serde"] }

syncer-model = {path = "../syncer-model"}