[package]
name = "syncer-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

md-5 = "0.10.6"
reqwest = { version = "0.12.12", default-features = false, features = [
    "stream",
    "multipart",
    "rustls-tls",
    "http2",
    "charset",
] }
rusqlite = { version = "0.33.0", features = ["bundled", "serde_json", "url", "chrono"] }
serde = { version = "1.0.217", features = ["derive"] }

romm-api = { path = "../romm-api" }
syncer-model = { path = "../syncer-model" }
