[package]
name = "syncer-model"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
futures = "0.3.31"
url = { version = "2.5.4", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
toml = "0.8.20"
tracing = "0.1.41"