[package]
name = "syncer-model"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
serde = { workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
toml = {workspace = true}
tracing ={workspace = true} 
