[package]
name = "syncer-ui-miyoo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = {workspace = true}
thiserror = {workspace = true}
futures = {workspace = true}
tokio = { workspace = true }

buoyant = { version = "0.4.0-alpha.2", features = ["std"], git = "https://github.com/riley-williams/buoyant" }
embedded-graphics = "0.8.1"
embedded-vintage-fonts = "0.2.0"
evdev = { version = "0.13.0", features = ["tokio"] }
linuxfb = "0.3.1"

syncer-model = {path = "../syncer-model"}