[package]
name = "syncer-ui-miyoo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = {workspace = true}
futures = {workspace = true}
interprocess = {workspace = true}
thiserror = {workspace = true}
tokio = { workspace = true }

syncer-model = {path = "../syncer-model"}

buoyant = { version = "0.4.0", features = ["std"]}
embedded-graphics = "0.8.1"
embedded-vintage-fonts = "0.2.0"
evdev = { version = "0.13.0", features = ["tokio"] }
linuxfb = "0.3.1"
procfs = "0.17.0"

